# phototonic

./: .gitignore  Bookmarks.cpp  Bookmarks.h  CMakeLists.txt  ColorsDialog.cpp  ColorsDialog.h  CopyMoveDialog.cpp  CopyMoveDialog.h  CopyMoveToDialog.cpp  CopyMoveToDialog.h  CropDialog.cpp  CropDialog.h  CropRubberband.cpp  CropRubberband.h  DirCompleter.cpp  DirCompleter.h  ExternalAppsDialog.cpp  ExternalAppsDialog.h  FileListWidget.cpp  FileListWidget.h  FileSystemModel.h  FileSystemTree.cpp  FileSystemTree.h  GuideWidget.cpp  GuideWidget.h  IconProvider.cpp  IconProvider.h  ImagePreview.cpp  ImagePreview.h  ImageViewer.cpp  ImageViewer.h  ImageWidget.cpp  ImageWidget.h  InfoViewer.cpp  InfoViewer.h  MessageBox.cpp  MessageBox.h  MetadataCache.cpp  MetadataCache.h  Phototonic.cpp  (+26 more)
.github/workflows/: build.yml
cmake/: version.cmake
translations/: phototonic.ts  phototonic_bs.qm  phototonic_bs.ts  phototonic_cs.qm  phototonic_cs.ts  phototonic_de.qm  phototonic_de.ts  phototonic_en.qm  phototonic_en.ts  phototonic_es.qm  phototonic_es.ts  phototonic_et.qm  phototonic_et.ts  phototonic_fi.qm  phototonic_fi.ts  phototonic_fr.qm  phototonic_fr.ts  phototonic_he.qm  phototonic_he.ts  phototonic_hr.qm  phototonic_hr.ts  phototonic_it.qm  phototonic_it.ts  phototonic_ka.qm  phototonic_ka.ts  phototonic_kab.ts  phototonic_lt.qm  phototonic_lt.ts  phototonic_nl.qm  phototonic_nl.ts  phototonic_pl.qm  phototonic_pl.ts  phototonic_pt.qm  phototonic_pt.ts  phototonic_ru.qm  phototonic_ru.ts  phototonic_sr.qm  phototonic_sr.ts  phototonic_sv.qm  phototonic_sv.ts  (+6 more)
